remove deleteOrder route, move encryptPassword function to helpers/users
